docs/docs/platforms/winpack_dldt/2020.1/index.md
# Index of `docs/platforms/winpack_dldt/2020.1/`

## Overview

This folder is part of the OpenCV repository structure and contains documentation, and other repository content.

**Location**: `docs/platforms/winpack_dldt/2020.1`



## Files (14)

This folder contains the following files:

| File Name | Type | Size | Documentation | Keywords |
|-----------|------|------|---------------|----------|
| [20200313-dldt-disable-unused-targets.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch_docs.md) | MD | 7.6KB | [docs](20200313-dldt-disable-unused-targets.patch_docs.md_docs.md) | [keywords](20200313-dldt-disable-unused-targets.patch_docs.md_kw.md) |
| [20200313-dldt-disable-unused-targets.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch_kw.md) | MD | 23.0KB | [docs](20200313-dldt-disable-unused-targets.patch_kw.md_docs.md) | [keywords](20200313-dldt-disable-unused-targets.patch_kw.md_kw.md) |
| [20200313-dldt-fix-binaries-location.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch_docs.md) | MD | 1.1KB | [docs](20200313-dldt-fix-binaries-location.patch_docs.md_docs.md) | [keywords](20200313-dldt-fix-binaries-location.patch_docs.md_kw.md) |
| [20200313-dldt-fix-binaries-location.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch_kw.md) | MD | 5.4KB | [docs](20200313-dldt-fix-binaries-location.patch_kw.md_docs.md) | [keywords](20200313-dldt-fix-binaries-location.patch_kw.md_kw.md) |
| [20200313-ngraph-disable-tests-examples.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch_docs.md) | MD | 1.3KB | [docs](20200313-ngraph-disable-tests-examples.patch_docs.md_docs.md) | [keywords](20200313-ngraph-disable-tests-examples.patch_docs.md_kw.md) |
| [20200313-ngraph-disable-tests-examples.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch_kw.md) | MD | 4.7KB | [docs](20200313-ngraph-disable-tests-examples.patch_kw.md_docs.md) | [keywords](20200313-ngraph-disable-tests-examples.patch_kw.md_kw.md) |
| [20200318-dldt-pdb.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch_docs.md) | MD | 1.1KB | [docs](20200318-dldt-pdb.patch_docs.md_docs.md) | [keywords](20200318-dldt-pdb.patch_docs.md_kw.md) |
| [20200318-dldt-pdb.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch_kw.md) | MD | 3.7KB | [docs](20200318-dldt-pdb.patch_kw.md_docs.md) | [keywords](20200318-dldt-pdb.patch_kw.md_kw.md) |
| [20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) | MD | 1.1KB | [docs](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md_docs.md) | [keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md_kw.md) |
| [20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md) | MD | 4.9KB | [docs](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md_docs.md) | [keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md_kw.md) |
| [patch.config.py_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/patch.config.py_docs.md) | MD | 3.1KB | [docs](patch.config.py_docs.md_docs.md) | [keywords](patch.config.py_docs.md_kw.md) |
| [patch.config.py_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/patch.config.py_kw.md) | MD | 2.5KB | [docs](patch.config.py_kw.md_docs.md) | [keywords](patch.config.py_kw.md_kw.md) |
| [sysroot.config.py_docs.md](../../../../../docs/platforms/winpack_dldt/2020.1/sysroot.config.py_docs.md) | MD | 5.5KB | [docs](sysroot.config.py_docs.md_docs.md) | [keywords](sysroot.config.py_docs.md_kw.md) |
| [sysroot.config.py_kw.md](../../../../../docs/platforms/winpack_dldt/2020.1/sysroot.config.py_kw.md) | MD | 7.5KB | [docs](sysroot.config.py_kw.md_docs.md) | [keywords](sysroot.config.py_kw.md_kw.md) |


## Navigation Hints

### How to Explore This Folder


### Documentation Files

- **[doc.md](doc.md)**: Detailed narrative documentation for this folder
- **[sub.md](sub.md)**: Keyword index for this folder and all subfolders
- **index.md** (this file): Quick reference and file listing

