docs/docs/platforms/winpack_dldt/2021.4/index.md
# Index of `docs/platforms/winpack_dldt/2021.4/`

## Overview

This folder is part of the OpenCV repository structure and contains documentation, and other repository content.

**Location**: `docs/platforms/winpack_dldt/2021.4`



## Files (14)

This folder contains the following files:

| File Name | Type | Size | Documentation | Keywords |
|-----------|------|------|---------------|----------|
| [20210630-dldt-disable-multidevice-autoplugin.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) | MD | 1.2KB | [docs](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md_docs.md) | [keywords](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md_kw.md) |
| [20210630-dldt-disable-multidevice-autoplugin.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch_kw.md) | MD | 4.5KB | [docs](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md_docs.md) | [keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md_kw.md) |
| [20210630-dldt-disable-unused-targets.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch_docs.md) | MD | 9.5KB | [docs](20210630-dldt-disable-unused-targets.patch_docs.md_docs.md) | [keywords](20210630-dldt-disable-unused-targets.patch_docs.md_kw.md) |
| [20210630-dldt-disable-unused-targets.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch_kw.md) | MD | 24.9KB | [docs](20210630-dldt-disable-unused-targets.patch_kw.md_docs.md) | [keywords](20210630-dldt-disable-unused-targets.patch_kw.md_kw.md) |
| [20210630-dldt-pdb.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch_docs.md) | MD | 1.2KB | [docs](20210630-dldt-pdb.patch_docs.md_docs.md) | [keywords](20210630-dldt-pdb.patch_docs.md_kw.md) |
| [20210630-dldt-pdb.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch_kw.md) | MD | 4.1KB | [docs](20210630-dldt-pdb.patch_kw.md_docs.md) | [keywords](20210630-dldt-pdb.patch_kw.md_kw.md) |
| [20210630-dldt-vs-version.patch_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch_docs.md) | MD | 1.6KB | [docs](20210630-dldt-vs-version.patch_docs.md_docs.md) | [keywords](20210630-dldt-vs-version.patch_docs.md_kw.md) |
| [20210630-dldt-vs-version.patch_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch_kw.md) | MD | 6.9KB | [docs](20210630-dldt-vs-version.patch_kw.md_docs.md) | [keywords](20210630-dldt-vs-version.patch_kw.md_kw.md) |
| [build.config.py_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/build.config.py_docs.md) | MD | 2.9KB | [docs](build.config.py_docs.md_docs.md) | [keywords](build.config.py_docs.md_kw.md) |
| [build.config.py_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/build.config.py_kw.md) | MD | 1.5KB | [docs](build.config.py_kw.md_docs.md) | [keywords](build.config.py_kw.md_kw.md) |
| [patch.config.py_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/patch.config.py_docs.md) | MD | 3.0KB | [docs](patch.config.py_docs.md_docs.md) | [keywords](patch.config.py_docs.md_kw.md) |
| [patch.config.py_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/patch.config.py_kw.md) | MD | 2.0KB | [docs](patch.config.py_kw.md_docs.md) | [keywords](patch.config.py_kw.md_kw.md) |
| [sysroot.config.py_docs.md](../../../../../docs/platforms/winpack_dldt/2021.4/sysroot.config.py_docs.md) | MD | 5.6KB | [docs](sysroot.config.py_docs.md_docs.md) | [keywords](sysroot.config.py_docs.md_kw.md) |
| [sysroot.config.py_kw.md](../../../../../docs/platforms/winpack_dldt/2021.4/sysroot.config.py_kw.md) | MD | 8.2KB | [docs](sysroot.config.py_kw.md_docs.md) | [keywords](sysroot.config.py_kw.md_kw.md) |


## Navigation Hints

### How to Explore This Folder


### Documentation Files

- **[doc.md](doc.md)**: Detailed narrative documentation for this folder
- **[sub.md](sub.md)**: Keyword index for this folder and all subfolders
- **index.md** (this file): Quick reference and file listing

